--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="rr.rcube">
-
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    package="com.example.dayana.myapplication">
 
     <application
         android:allowBackup="true"
-        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -21,16 +15,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login"
-            android:theme="@style/AppTheme" />
+        <activity android:name=".Login" />
+        <activity android:name=".Register" />
         <activity android:name=".MainActivityU" />
         <activity android:name=".MainActivityC" />
-        <activity android:name=".ListCorps" />
-        <activity android:name=".ListConvs" />
-        <activity android:name=".Register" />
-        <activity android:name=".Request"></activity>
+        <activity android:name=".Request" />
+        <activity android:name=".ListConv" />
+        <activity android:name=".ListCorp"></activity>
     </application>
 
 </manifest>
